
MASTER

* Tested ruby 1.9, ruby-odbc 0.9996, and DBI 0.4.1. Also added correct support for UTF-8 character 
  encoding going in and out of the DB. See before gist http://gist.github.com/111709 and after gist 
  http://gist.github.com/111719


* 2.2.16 * (April 21st, 2009)

* Make add_limit_offset! only add locking hints (for tally) when the :lock option is present. Added tests 
  to make sure tally SQL is augmented correctly and tests to make sure that add_lock! is doing what it needs 
  for deep sub selects in paginated results. [Ken Collins]

* Add auto reconnect support utilizing a new #with_auto_reconnect block. By default each query run through 
  the adapter will automatically reconnect at standard intervals, logging attempts along the way, till success 
  or the original exception bubbles up. See docs for more details. Resolves ticket #18 [Ken Collins] 

* Update internal helper method #orders_and_dirs_set to cope with an order clause like "description desc". This 
  resolves ticket #26 [Ken Collins]

* Provide support for running queries at different isolation levels using #run_with_isolation_level method 
  that can take a block or not. Also implement a #user_options method that reflects on the current user 
  session values. Resolves #20 [Murray Steele]


* 2.2.15 * (March 23rd, 2009)

* Better add_lock! method that can add the lock to just about all the elements in the statement. This 
  could be eager loaded associations, joins, etc. Done so that paginated results can easily add lock 
  options for performance. Note, the tally count in add_limit_offset! use "WITH (NOLOCK)" explicitly 
  as it can not hurt and is needed. [Ken Collins]


* 2.2.14 * (March 17th, 2009)

* Rails2.3 - Back passing tests on 2.2 work. Includes: (1) Created new test helpers that check ActiveRecord 
  version strings so we can conditionally run 2.2 and 2.3 tests. (2) Making TransactionTestSqlserver use Ship vs 